--- a/hello-arc.yaml
+++ b/hello-arc.yaml
@@ -15,7 +15,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: hello-arc
-  namespace: hello-arc
+  namespace: expertslive
 spec:
   replicas: 3
   selector:
