--- a/nginx.yaml
+++ b/nginx.yaml
@@ -4,7 +4,7 @@ metadata:
   labels:
     app.kubernetes.io/instance: ingress-nginx
     app.kubernetes.io/name: ingress-nginx
-  name: ingress-nginx
+  name: expertslive
 ---
 apiVersion: v1
 automountServiceAccountToken: true
@@ -17,7 +17,7 @@ metadata:
     app.kubernetes.io/part-of: ingress-nginx
     app.kubernetes.io/version: 1.3.1
   name: ingress-nginx
-  namespace: ingress-nginx
+  namespace: expertslive
 ---
 apiVersion: v1
 kind: ServiceAccount
@@ -29,7 +29,7 @@ metadata:
     app.kubernetes.io/part-of: ingress-nginx
     app.kubernetes.io/version: 1.3.1
   name: ingress-nginx-admission
-  namespace: ingress-nginx
+  namespace: expertslive
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
@@ -41,7 +41,7 @@ metadata:
     app.kubernetes.io/part-of: ingress-nginx
     app.kubernetes.io/version: 1.3.1
   name: ingress-nginx
-  namespace: ingress-nginx
+  namespace: expertslive
 rules:
 - apiGroups:
   - ""
@@ -138,7 +138,7 @@ metadata:
     app.kubernetes.io/part-of: ingress-nginx
     app.kubernetes.io/version: 1.3.1
   name: ingress-nginx-admission
-  namespace: ingress-nginx
+  namespace: expertslive
 rules:
 - apiGroups:
   - ""
@@ -250,7 +250,7 @@ metadata:
     app.kubernetes.io/part-of: ingress-nginx
     app.kubernetes.io/version: 1.3.1
   name: ingress-nginx
-  namespace: ingress-nginx
+  namespace: expertslive
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: Role
@@ -258,7 +258,7 @@ roleRef:
 subjects:
 - kind: ServiceAccount
   name: ingress-nginx
-  namespace: ingress-nginx
+  namespace: expertslive
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
@@ -270,7 +270,7 @@ metadata:
     app.kubernetes.io/part-of: ingress-nginx
     app.kubernetes.io/version: 1.3.1
   name: ingress-nginx-admission
-  namespace: ingress-nginx
+  namespace: expertslive
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: Role
@@ -278,7 +278,7 @@ roleRef:
 subjects:
 - kind: ServiceAccount
   name: ingress-nginx-admission
-  namespace: ingress-nginx
+  namespace: expertslive
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
@@ -296,7 +296,7 @@ roleRef:
 subjects:
 - kind: ServiceAccount
   name: ingress-nginx
-  namespace: ingress-nginx
+  namespace: expertslive
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
@@ -315,7 +315,7 @@ roleRef:
 subjects:
 - kind: ServiceAccount
   name: ingress-nginx-admission
-  namespace: ingress-nginx
+  namespace: expertslive
 ---
 apiVersion: v1
 data:
@@ -329,7 +329,7 @@ metadata:
     app.kubernetes.io/part-of: ingress-nginx
     app.kubernetes.io/version: 1.3.1
   name: ingress-nginx-controller
-  namespace: ingress-nginx
+  namespace: expertslive
 ---
 apiVersion: v1
 kind: Service
@@ -341,7 +341,7 @@ metadata:
     app.kubernetes.io/part-of: ingress-nginx
     app.kubernetes.io/version: 1.3.1
   name: ingress-nginx-controller
-  namespace: ingress-nginx
+  namespace: expertslive
 spec:
   externalTrafficPolicy: Local
   ipFamilies:
@@ -374,7 +374,7 @@ metadata:
     app.kubernetes.io/part-of: ingress-nginx
     app.kubernetes.io/version: 1.3.1
   name: ingress-nginx-controller-admission
-  namespace: ingress-nginx
+  namespace: expertslive
 spec:
   ports:
   - appProtocol: https
@@ -397,7 +397,7 @@ metadata:
     app.kubernetes.io/part-of: ingress-nginx
     app.kubernetes.io/version: 1.3.1
   name: ingress-nginx-controller
-  namespace: ingress-nginx
+  namespace: expertslive
 spec:
   minReadySeconds: 0
   revisionHistoryLimit: 10
@@ -509,7 +509,7 @@ metadata:
     app.kubernetes.io/part-of: ingress-nginx
     app.kubernetes.io/version: 1.3.1
   name: ingress-nginx-admission-create
-  namespace: ingress-nginx
+  namespace: expertslive
 spec:
   template:
     metadata:
@@ -556,7 +556,7 @@ metadata:
     app.kubernetes.io/part-of: ingress-nginx
     app.kubernetes.io/version: 1.3.1
   name: ingress-nginx-admission-patch
-  namespace: ingress-nginx
+  namespace: expertslive
 spec:
   template:
     metadata:
@@ -624,7 +624,7 @@ webhooks:
   clientConfig:
     service:
       name: ingress-nginx-controller-admission
-      namespace: ingress-nginx
+      namespace: expertslive
       path: /networking/v1/ingresses
   failurePolicy: Fail
   matchPolicy: Equivalent
