--- a/hello-arc.yaml
+++ b/hello-arc.yaml
@@ -33,4 +33,4 @@ spec:
         - containerPort: 8080
         env:
         - name: MESSAGE
-          value: ExpertsLive!! Hello Arc Application on Kubernetes!
+          value: Kubernetes!! Hello Arc Application on Kubernetes!
